[package]
name = "simple_chat_app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }